# propstar_core

./: .gitignore  LICENSE  README.md  pyproject.toml
src/propstar_core/: data_handle.py
src/propstar_core/test/: conftest.py  test_data_handle.py
