[build-system]
requires = ["setuptools >= 64", "setuptools-scm >= 8"]
build-backend = "setuptools.build_meta"

[project]
name = "prodige_core"
dependencies = [
  "importlib-resources;python_version<'3.9'",
  "astropy>=5.0",
  "matplotlib>=3.6",
  "spectral_cube>=0.6.5",
  "radio_beam>0.3.7"
]

requires-python = ">=3.7"
authors = [
  {name = "Jaime E. Pineda", email = "jpineda@mpe.mpg.de"},
]
maintainers = [
  {name = "Jaime E. Pineda", email = "jpineda@mpe.mpg.de"},
]
description = "Package to be used in ProPStar analysis and/or publications."
readme = "README.md"
license = {text = "MIT License"}

dynamic = ["version"]

[tool.setuptools_scm]

[tool.setuptools]
include-package-data = true
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.coverage.run]
branch = true
source = ["propstar_core"]

[tool.pytest.ini_options]
pythonpath = "src/"
addopts = [
    "--import-mode=importlib"#,
    # "--cov=prodige_core --cov-report html"
    ]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug",
    "if __name__ == .__main__.:"
    ]
ignore_errors = true

[tool.coverage.html]
directory = "coverage_html_report"

[project.urls]
Homepage = "https://github.com/jpinedaf/propstar_core"
